--- a/index.html
+++ b/index.html
@@ -177,18 +177,133 @@
 			</div>
 		</div>
 	</center>
-	</div>	
+	</div>
+
+		<div class="Skills container-fluid">
+			<div class="row">
+				<div class="col-sm-10 offset-1">
+					<h2>WE GOT SKILLS!</h2>
+					 <center><div class="bar"></div></center>
+					<br>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod<br>tempor incididunt ut labore et dolore magna aliqua.</p>
+				</div>
+			</div>
+
+
+			<div class="container">
+		    <div class="row">
+					<div class="col-md-3 col-sm-6">
+							<div class="progress blue">
+									<span class="progress-left">
+											<span class="progress-bar"></span>
+									</span>
+									<span class="progress-right">
+											<span class="progress-bar"></span>
+									</span>
+									<div class="progress-value">90%</div>
+							</div>
+							<div class="textop">
+								<h4>WEB DESIGN</h4>
+							</div>
+
+					</div>
+		        <div class="col-md-3 col-sm-6">
+		            <div class="progress pink">
+		                <span class="progress-left">
+		                    <span class="progress-bar"></span>
+		                </span>
+		                <span class="progress-right">
+		                    <span class="progress-bar"></span>
+		                </span>
+		                <div class="progress-value">75%</div>
+		            </div>
+								<div class="textop">
+									<h4>HTML / CSS</h4>
+								</div>
+		        </div>
+		        <div class="col-md-3 col-sm-6">
+		            <div class="progress green">
+		                <span class="progress-left">
+		                    <span class="progress-bar"></span>
+		                </span>
+		                <span class="progress-right">
+		                    <span class="progress-bar"></span>
+		                </span>
+		                <div class="progress-value">70%</div>
+
+		            </div>
+								<div class="textop">
+									<h4>GRAPHIC DESIGN</h4>
+								</div>
+		        </div>
+						<div class="col-md-3 col-sm-6">
+		            <div class="progress orange">
+		                <span class="progress-left">
+		                    <span class="progress-bar"></span>
+		                </span>
+		                <span class="progress-right">
+		                    <span class="progress-bar"></span>
+		                </span>
+		                <div class="progress-value">85%</div>
+		            </div>
+								<div class="textop">
+									<h4>UI / UX</h4>
+								</div>
+		        </div>
+		    </div>
+		</div>
+
+		</div>
+		<!-- Empieza portafolio-->
+		<div class="portfolio">
+			    	<div class="wrapper">
+			        	<h2>OUR PORTFOLIO</h2>
+			            <hr>
+			            <p>Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet<br>consectetur, adipisci velit, sed quia non numquam</p>
+
+									<ul class="project_type">
+			            	<li><a href="#">ALL</a></li>
+			              <li><a href="#">WEB</a></li>
+			              <li><a href="#">APPS</a></li>
+			              <li><a href="#">ICONS</a></li>
+			            </ul>
+
+			            <ul class="works">
+			            	<li>
+			                	<img src="img/isometric.png">
+			                    <p>ISOMETRIC PERSPECTIVE MOCK-UP</p>
+			                </li>
+			                <li>
+			                	<img src="img/time.png">
+			                    <p>TIME ZONE APP UI</p>
+			                </li>
+			                <li>
+			                	<img src="img/virio.png">
+			                    <p>VIRO MEDIA PLAYERS UI</p>
+			                </li>
+			                <li>
+			                	<img src="img/blog.png">
+			                    <p>BLOG/MAGAZINE FLAT UI KIT</p>
+			                </li>
+			            </ul>
+
+			            <div class="button green-button"><a href="#">Load more Projects</a></div>
+
+			        </div>
+			    </div>
+	
+	<!-- Empieza Contactos-->
 		<div class="Contact container-fluid">
 	   <br><br> <div class="row">
 			<div class="col-sm-10 offset-1 bottom_header">
-				<br><h2 class="text-center">GET IN TOUCH</h2>  
-       
+				<br><h2 class="text-center">GET IN TOUCH</h2>
+
        <div class="bar"></div>
        <br>
         <h6 class="text-center">1600 Pennsylvania Ave NW, Washington, DC 20500, United States of America. Tel: (202) 456-1111</h6>
 			</div>
-		</div>	    
-    
+		</div>
+
     <center><form action="index.html">
         <input type="text" id="name" placeholder="Your Name" required="1" class="required">
         <input type="text" id="email" placeholder="Your Email" required="1"><br>
@@ -197,10 +312,10 @@
 	    <br>
 	    <center><a class="btn btn-primary btn-lg" href="#">SEND MESSAGE</a></center>
 	</div>
-	
+
 	<footer>
 	   <center><div class="sociallink">
-	      <br>  
+	      <br>
             <a href="#" class="linkSocial">Facebook</a>
 	        <a href="#" class="linkSocial active">Twitter</a>
 	        <a href="#" class="linkSocial">Google+</a>
@@ -208,7 +323,7 @@
 	        <a href="#" class="linkSocial">Behance</a>
 	        <a href="#" class="linkSocial">Dribble</a>
 	        <a href="#" class="linkSocial">GitHub</a>
-	    </div></center> 
+	    </div></center>
 	</footer>
 
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
